CSS: Contrast correction

--- a/app/Components/Board/Content/Title/Title.module.css
+++ b/app/Components/Board/Content/Title/Title.module.css
@@ -4,7 +4,7 @@
   gap: 10px;
   width: var(--column-width);
   min-width: var(--column-width);
-  color: rgb(var(--grey));
+  color: var(--secondary-font-color);
   font-size: var(--font--medium);
   font-weight: bold;
 }
